Fix invisible div covering faders in Studio Removing unnecessary divs from Studio

--- a/electron-vite-project/src/Studio.css
+++ b/electron-vite-project/src/Studio.css
@@ -103,11 +103,8 @@
 }
 
 .studioOverviewExtra {
-  position: relative;
   top: -640px;
   left: 480px;
-  width: 100%;
-  height: 100%;
 }
 
 .studioOverviewInfopanelText {
